# backend/internal/application/friend/request_dto.go
@@ -5,23 +5,20 @@ import (
 )
 
 type FriendRequestDTO struct {
-	RequestID       string
-	FromUserID      string
-	FromUsername    string
-	FromDisplayName string
-	ToUserID        string
-	Message         string
-	Status          int
-	ApplyTime       int64
+	RequestID         string
+	ApplicantUserID   string
+	ApplicantNickName string
+	Message           string
+	Status            int
+	ApplyTime         int64
 }
 
 func toFriendRequestDTO(fr *friendrequestentity.FriendRequest) FriendRequestDTO {
 	return FriendRequestDTO{
-		RequestID:  fr.RequestId,
-		FromUserID: fr.FromUserId,
-		ToUserID:   fr.ToUserId,
-		Message:    fr.Message,
-		Status:     int(fr.Status),
-		ApplyTime:  fr.ApplyTime,
+		RequestID:       fr.RequestId,
+		ApplicantUserID: fr.ApplicantUserId,
+		Message:         fr.Message,
+		Status:          int(fr.Status),
+		ApplyTime:       fr.ApplyTime,
 	}
 }
